# flutter_lancedb

./: .gitignore  README.md  pubspec.yaml
.github/: copilot-instructions.md
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/: build_pod.sh
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_lancedb_example/: MainActivity.kt
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_lancedb.podspec
lib/: flutter_lancedb.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: connection.dart  query.dart  table.dart  types.dart  types.freezed.dart
linux/: CMakeLists.txt
macos/: flutter_lancedb.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  internal.rs  lib.rs
rust/src/api/: connection.rs  mod.rs  query.rs  table.rs  types.rs
windows/: CMakeLists.txt
