[package]
name = "flutter_lancedb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
lancedb = "0.23"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow-array = "56"
arrow-schema = "56"
futures = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.dev]
opt-level = 1
debug = 1
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
strip = "symbols"
